Fix horizontal scrolling.

--- a/kronolith/themes/default/dynamic/screen.css
+++ b/kronolith/themes/default/dynamic/screen.css
@@ -123,7 +123,7 @@ html, body {
     font-weight: bold;
 }
 .kronolithLongField {
-    width: 100%;
+    width: 99%;
 }
 div.kronolithFormActions {
     margin: 5px 0;
